Final devblog entry for the semester!

--- a/16october22.html
+++ b/16october22.html
@@ -42,7 +42,7 @@
                     I spent the final week of sprint 1 revamping and revising my previous documentation and ideas, especially my oldest ideas, which needed accompanying visuals.
                     I successfully updated all of my documentation and it benefited my design pitch slides greatly.
                     <br></br>
-                    <img src="laser_beam_slide.png" alt="Example slide from sprint 1 end of pitch, describing Laser Beam weapon.">
+                    <img src="laser_beam_slide.PNG" alt="Example slide from sprint 1 end of pitch, describing Laser Beam weapon.">
                     <br></br>
                     The in-person meeting was extremely valuable for clarifying my ideas ("how will the player turn the laser beam on and off?") 
                     and understanding teammates' needs ("does the programming team need to program the Super Medbay from scratch?"). 
@@ -56,7 +56,7 @@
                     in-game. Though copying over stat values and Confluence links was menial, I also assigned a price to every item in the shop and decided
                     when each item first becomes available for purchase. Both of these qualities are very likely to change once I transition to game balancing.
                     <br></br>
-                    <img src="encounter_3_shop.png" alt="Table representing shop offerings prior to encounter 3 of Project: Light">
+                    <img src="encounter_3_shop.PNG" alt="Table representing shop offerings prior to encounter 3 of Project: Light">
                     <br></br>
                     This table represents shop offerings prior to encounter 3 of Project: Light; I created similar tables for 5 shops, corresponding 
                     to each of the 5 planned encounters. I plan on updating these tables over time with both new items and specific values for how much
