--- a/wolvsoftblog.html
+++ b/wolvsoftblog.html
@@ -24,6 +24,7 @@
 
     <p>
         <ul class="sectioncontent">
+            <li><a href="11december22.html">December 11th, 2022</a></li>
             <li><a href="27november22.html">November 27th, 2022</a></li>
             <li><a href="13november22.html">November 13th, 2022</a></li>
             <li><a href="30october22.html">October 30th, 2022</a></li>
