Added links to download Subtension

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="navbar">
         <a href="index.html">Main Page</a>
         <a href="wolvsoftblog.html">WolverineSoft Devblog</a>
+        <a href="https://wolverinesoft-studio.itch.io/subtension">Download Subtension!</a>
     </div>
 
     <div class="row">
