--- a/wolvsoftblog.html
+++ b/wolvsoftblog.html
@@ -20,10 +20,13 @@
     <div class="navbar">
         <a href="index.html">Main Page</a>
         <a href="wolvsoftblog.html">WolverineSoft Devblog</a>
+        <a href="https://wolverinesoft-studio.itch.io/subtension">Download Subtension!</a>
     </div>
 
     <p>
         <ul class="sectioncontent">
+            <h2 class="sectionheader">Download our game, Subtension, 
+                <a href="https://wolverinesoft-studio.itch.io/subtension">here</a>!</h2>
             <li><a href="11december22.html">December 11th, 2022</a></li>
             <li><a href="27november22.html">November 27th, 2022</a></li>
             <li><a href="13november22.html">November 13th, 2022</a></li>
