--- a/16october22.html
+++ b/16october22.html
@@ -22,6 +22,7 @@
             <a href="index.html">Main Page</a>
             <a href="wolvsoftblog.html">WolverineSoft Devblog</a>
             <a href="https://wolverinesoft-studio.itch.io/subtension">Download Subtension!</a>
+            <a href="eecs498.html">EECS498 Projects</a>
         </div>
 
         <div class="row">
