Added project 2 video and description

--- a/eecs498.html
+++ b/eecs498.html
@@ -31,8 +31,18 @@
             </h2>
             Learning Unreal and Unity for VR and AR (XR) development, culminating in 
             a final project aiming to positively impact society through XR applications.    
+            
+            <br>
 
             <a href="https://www.youtube.com/watch?v=5cIJDmTx_Hs">Project 1 VR: BBB 1695 simulator</a>
+            <li>Preserve the spirit of BBB room 1695 in virtual reality.</li>
+            <li>Interact with other "students" and the environment around you!</li>
+
+            <br>
+
+            <a href="https://youtu.be/xBYI1wH3AJw">Project 2 AR: A2GO Game</a>
+            <li>Plant trees across Ann Arbor and watch them pop up in augmented reality.</li>
+            <li>Fend off hostile squirrels and explore new locations on campus!</li>
         </ul>  
     </p>
 </body>
