Update to project descriptions

--- a/eecs498.html
+++ b/eecs498.html
@@ -36,13 +36,15 @@
 
             <a href="https://www.youtube.com/watch?v=5cIJDmTx_Hs">Project 1 VR: BBB 1695 simulator</a>
             <li>Preserve the spirit of BBB room 1695 in virtual reality.</li>
-            <li>Interact with other "students" and the environment around you!</li>
+            <li>Converse with other "students"!</li>
+            <li>Clean up the room's mess...or make things worse! (Do not do this in real life)</li>
 
             <br>
 
             <a href="https://youtu.be/xBYI1wH3AJw">Project 2 AR: A2GO Game</a>
             <li>Plant trees across Ann Arbor and watch them pop up in augmented reality.</li>
-            <li>Fend off hostile squirrels and explore new locations on campus!</li>
+            <li>Solve puzzles and fend off hostile squirrels!</li>
+            <li>Unlock new trees </li>
         </ul>  
     </p>
 </body>
