--- a/eecs498.html
+++ b/eecs498.html
@@ -44,7 +44,10 @@
             <a href="https://youtu.be/xBYI1wH3AJw">Project 2 AR: A2GO Game</a>
             <li>Plant trees across Ann Arbor and watch them pop up in augmented reality.</li>
             <li>Solve puzzles and fend off hostile squirrels!</li>
-            <li>Unlock new trees </li>
+            <li>Unlock new trees as you go!</li>
+
+            <a href="https://jsegawa4.wixsite.com/p3-vr"> Project 3 VR: CyberPunch</a>
+            <li></li>
         </ul>  
     </p>
 </body>
