--- a/eecs498.html
+++ b/eecs498.html
@@ -47,7 +47,9 @@
             <li>Unlock new trees as you go!</li>
 
             <a href="https://jsegawa4.wixsite.com/p3-vr"> Project 3 VR: CyberPunch</a>
-            <li></li>
+            <li>Boxing simulator combining a workout and entertainment</li>
+            <li>Learn real moves and punches from trainers in VR</li>
+            <li>Practice and have fun with a special minigame</li>
         </ul>  
     </p>
 </body>
