--- a/eecs498.html
+++ b/eecs498.html
@@ -22,6 +22,7 @@
         <a href="wolvsoftblog.html">WolverineSoft Devblog</a>
         <a href="https://wolverinesoft-studio.itch.io/subtension">Download Subtension!</a>
         <a href="eecs498.html">EECS498 Projects</a>
+        <a href="eecs494.html">EECS494 Projects</a>
     </div>
 
     <p>
@@ -29,9 +30,12 @@
             <h2 class="sectionheader">
                 EECS498: Mixed Reality and Society
             </h2>
+
             Learning Unreal and Unity for VR and AR (XR) development, culminating in 
             a final project aiming to positively impact society through XR applications.    
             
+            <br>
+
             <br>
 
             <a href="https://www.youtube.com/watch?v=5cIJDmTx_Hs">Project 1 VR: BBB 1695 simulator</a>
@@ -45,6 +49,8 @@
             <li>Plant trees across Ann Arbor and watch them pop up in augmented reality.</li>
             <li>Solve puzzles and fend off hostile squirrels!</li>
             <li>Unlock new trees as you go!</li>
+
+            <br>
 
             <a href="https://jsegawa4.wixsite.com/p3-vr"> Project 3 VR: CyberPunch</a>
             <li>Boxing simulator combining a workout and entertainment</li>
