--- a/11december22.html
+++ b/11december22.html
@@ -23,6 +23,7 @@
             <a href="wolvsoftblog.html">WolverineSoft Devblog</a>
             <a href="https://wolverinesoft-studio.itch.io/subtension">Download Subtension!</a>
             <a href="eecs498.html">EECS498 Projects</a>
+            <a href="eecs494.html">EECS494 Projects</a>
         </div>
 
         <div class="row">
