--- a/wolvsoftblog.html
+++ b/wolvsoftblog.html
@@ -22,6 +22,7 @@
         <a href="wolvsoftblog.html">WolverineSoft Devblog</a>
         <a href="https://wolverinesoft-studio.itch.io/subtension">Download Subtension!</a>
         <a href="eecs498.html">EECS498 Projects</a>
+        <a href="eecs494.html">EECS494 Projects</a>
     </div>
 
     <p>
