temp removed photo

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <div class="row">
         <div class="side">
-            <img class="selfie" src="https://cdn.discordapp.com/attachments/887928095519174678/1014688865690337310/unknown.png" alt = "Justin Segawa at Carrie Blast Furnaces, Summer 2022">
-            <p class = "selfiecaption">Summer 2022 at Carrie Blast Furnaces</p>
+            <!--<img class="selfie" src="https://cdn.discordapp.com/attachments/887928095519174678/1014688865690337310/unknown.png" alt = "Justin Segawa, Summer 2022">-->
+            <!--<p class = "selfiecaption">Summer 2022 at Carrie Blast Furnaces</p>-->
            
         </div>
 
