--- a/eecs494.html
+++ b/eecs494.html
@@ -28,11 +28,11 @@
     <p>
         <ul class="sectioncontent">
             <h2 class="sectionheader">
-                EECS498: Introduction to Game Development
+                EECS494: Introduction to Game Development
             </h2>
 
-            Currently enrolled in this class, creating games in Unity Engine. Please look
-            forward to my original game prototype coming in October 2023!
+            Currently enrolled in this class, creating games in Unity Engine. Creating
+            an original game for release in December 2023!
             
             <br>
 
@@ -42,6 +42,11 @@
             <li>Play the original Metroid for NES, recreated in part!</li>
             <li>Press 4 for a special custom level!</li>
             <li>Developed over the course of 3 weeks with Jesus Delgado</li>
+
+            <a href="https://shamplade.itch.io/flower-defense">Project 2: Flower Defense</a>
+            <li>Defend your precious flower from waves of evil insects!</li>
+            <li>Game prototype demonstrating wave defense game with vertical elements.</li>
+            <li>Created over a 2-week development period, incorporating peer playtest feedback.</li>            
         </ul>  
     </p>
 </body>
