update for p3 eecs494

--- a/eecs494.html
+++ b/eecs494.html
@@ -46,7 +46,12 @@
             <a href="https://shamplade.itch.io/flower-defense">Project 2: Flower Defense</a>
             <li>Defend your precious flower from waves of evil insects!</li>
             <li>Game prototype demonstrating wave defense game with vertical elements.</li>
-            <li>Created over a 2-week development period, incorporating peer playtest feedback.</li>            
+            <li>Created over a 2-week development period, incorporating peer playtest feedback.</li>        
+            
+            <a href="https://kazusakamoto.itch.io/poweroffire">Project 3: The Power of Fire</a>
+            <li>Blast through a dark tower with explosive jumps in search of your memories and freedom.</li>
+            <li>Original game -- the final project of the class!</li>
+            <li>Developed over a 6-weeks in a team of 5 using Agile workflow.</li>      
         </ul>  
     </p>
 </body>
