revamp with all updated info

--- a/eecs498.html
+++ b/eecs498.html
@@ -10,20 +10,12 @@
     <link rel="stylesheet" href="personalwebsite.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <script src="personalwebsite.js"></script>
+    <script src="components/header.js" type="text/javascript" defer></script>
 </head>
-<body> 
-    <div class="header">
-        <h1>Justin Segawa's Project Page</h1>
-        <p>WolverineSoft Devblog</p>
-    </div>
 
-    <div class="navbar">
-        <a href="index.html">Main Page</a>
-        <a href="wolvsoftblog.html">WolverineSoft Devblog</a>
-        <a href="https://wolverinesoft-studio.itch.io/subtension">Download Subtension!</a>
-        <a href="eecs498.html">EECS498 Projects</a>
-        <a href="eecs494.html">EECS494 Projects</a>
-    </div>
+<body> 
+    
+    <header-component></header-component>
 
     <p>
         <ul class="sectioncontent">
@@ -31,31 +23,29 @@
                 EECS498: Mixed Reality and Society
             </h2>
 
-            Learning Unreal and Unity for VR and AR (XR) development, culminating in 
-            a final project aiming to positively impact society through XR applications.    
+            Learned Unreal and Unity for VR and AR (XR) development aimed toward positive social impact.    
             
-            <br>
+            <br><br>
+
+            <a href="https://jsegawa4.wixsite.com/p3-vr" target="_blank" rel="noopener noreferrer"> Project 3 VR: CyberPunch</a>
+            <li>Boxing simulator combining a workout and entertainment</li>
+            <li>Learn real moves and punches from trainers in VR</li>
+            <li>Practice and have fun with a special minigame</li>
 
             <br>
 
-            <a href="https://www.youtube.com/watch?v=5cIJDmTx_Hs">Project 1 VR: BBB 1695 simulator</a>
-            <li>Preserve the spirit of BBB room 1695 in virtual reality.</li>
-            <li>Converse with other "students"!</li>
-            <li>Clean up the room's mess...or make things worse! (Do not do this in real life)</li>
-
-            <br>
-
-            <a href="https://youtu.be/xBYI1wH3AJw">Project 2 AR: A2GO Game</a>
+            <a href="https://youtu.be/xBYI1wH3AJw" target="_blank" rel="noopener noreferrer">Project 2 AR: A2GO Game</a>
             <li>Plant trees across Ann Arbor and watch them pop up in augmented reality.</li>
             <li>Solve puzzles and fend off hostile squirrels!</li>
             <li>Unlock new trees as you go!</li>
 
             <br>
 
-            <a href="https://jsegawa4.wixsite.com/p3-vr"> Project 3 VR: CyberPunch</a>
-            <li>Boxing simulator combining a workout and entertainment</li>
-            <li>Learn real moves and punches from trainers in VR</li>
-            <li>Practice and have fun with a special minigame</li>
+            <a href="https://www.youtube.com/watch?v=5cIJDmTx_Hs" target="_blank" rel="noopener noreferrer">Project 1 VR: BBB 1695 simulator</a>
+            <li>Preserve the spirit of BBB room 1695 in virtual reality.</li>
+            <li>Converse with other "students"!</li>
+            <li>Clean up the room's mess...or make things worse! (Do not do this in real life)</li>
+
         </ul>  
     </p>
 </body>
