--- a/02october22.html
+++ b/02october22.html
@@ -10,21 +10,12 @@
         <link rel="stylesheet" href="personalwebsite.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
         <script src="personalwebsite.js"></script>
+        <script src="components/header.js" type="text/javascript" defer></script>
     </head>
 
     <body>
-        <div class="header">
-            <h1>Justin Segawa's Project Page</h1>
-            <p>WolverineSoft Devblog</p>
-        </div>
-
-        <div class="navbar">
-            <a href="index.html">Main Page</a>
-            <a href="wolvsoftblog.html">WolverineSoft Devblog</a>
-            <a href="https://wolverinesoft-studio.itch.io/subtension">Download Subtension!</a>
-            <a href="eecs498.html">EECS498 Projects</a>
-            <a href="eecs494.html">EECS494 Projects</a>
-        </div>
+    
+        <header-component></header-component>
 
         <div class="row">
             <div class="main">
