--- a/wolvsoftblog.html
+++ b/wolvsoftblog.html
@@ -10,25 +10,17 @@
     <link rel="stylesheet" href="personalwebsite.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <script src="personalwebsite.js"></script>
+    <script src="components/header.js" type="text/javascript" defer></script>
+
 </head>
 <body> 
-    <div class="header">
-        <h1>Justin Segawa's Project Page</h1>
-        <p>WolverineSoft Devblog</p>
-    </div>
 
-    <div class="navbar">
-        <a href="index.html">Main Page</a>
-        <a href="wolvsoftblog.html">WolverineSoft Devblog</a>
-        <a href="https://wolverinesoft-studio.itch.io/subtension">Download Subtension!</a>
-        <a href="eecs498.html">EECS498 Projects</a>
-        <a href="eecs494.html">EECS494 Projects</a>
-    </div>
+    <header-component></header-component>
 
     <p>
         <ul class="sectioncontent">
             <h2 class="sectionheader">Download our game, Subtension, 
-                <a href="https://wolverinesoft-studio.itch.io/subtension">here</a>!</h2>
+                <a href="https://wolverinesoft-studio.itch.io/subtension" target="_blank" rel="noopener noreferrer">here</a>!</h2>
             <li><a href="11december22.html">December 11th, 2022</a></li>
             <li><a href="27november22.html">November 27th, 2022</a></li>
             <li><a href="13november22.html">November 13th, 2022</a></li>
