--- a/wolvsoftblog.html
+++ b/wolvsoftblog.html
@@ -19,7 +19,10 @@
 
     <p>
         <ul class="sectioncontent">
-            <h2 class="sectionheader">Download our game, Subtension, 
+            <h2 class="sectionheader">Winter 2024: Project Quest</h2>
+            <li><a href="11february24.html">February 11th, 2024</a></li>
+
+            <h2 class="sectionheader">Download Fall 2022 game, Subtension, 
                 <a href="https://wolverinesoft-studio.itch.io/subtension" target="_blank" rel="noopener noreferrer">here</a>!</h2>
             <li><a href="11december22.html">December 11th, 2022</a></li>
             <li><a href="27november22.html">November 27th, 2022</a></li>
