blog post april 7

--- a/wolvsoftblog.html
+++ b/wolvsoftblog.html
@@ -23,6 +23,7 @@
             <li><a href="11february24.html">February 11th, 2024</a></li>
             <li><a href="25february24.html">February 25th, 2024</a></li>
             <li><a href="10march24.html">March 10th, 2024</a></li>
+            <li><a href="7april24.html">April 7th, 2024</a></li>
 
             <h2 class="sectionheader">Download Fall 2022 game, Subtension, 
                 <a href="https://wolverinesoft-studio.itch.io/subtension" target="_blank" rel="noopener noreferrer">here</a>!</h2>
