--- a/7april24.html
+++ b/7april24.html
@@ -31,7 +31,7 @@
                     white circle).
                     <br><br>
                     I created a new prefab and made sure it was functionally compatible anywhere in the world. I was meant to also implement
-                    updated art assets and start placing the save point into the overworld. Unfportunately the new sprite was
+                    updated art assets and start placing the save point into the overworld. Unfortunately the new sprite was
                     not completed in time for this sprint, and I reached out but did not hear back on any concrete details for where the object
                     should go. I still made sure the prefab was ready for placement at any time, and added some fun temp art in the meantime:
                     <br><br>
@@ -114,7 +114,7 @@
                     </video> 
                     <br></br>
                     I tested a fix on this by changing the sprite's pivot point, but the same sprite was used for a separate, 
-                    completely horizontal bridge, so doing that would break the latter bridge. Once again the task in Jira described
+                    completely horizontal bridge, so doing that would break the latter bridge. Once again the task I was assigned in Jira described
                     a new sprite for the fully vertical bridge, but it arrived late so it will be implemented in the next sprint.
                 </p>
 
