--- a/wolvsoftblog.html
+++ b/wolvsoftblog.html
@@ -19,7 +19,7 @@
 
     <p>
         <ul class="sectioncontent">
-            <h2 class="sectionheader">Winter 2024: Project Quest</h2>
+            <h2 class="sectionheader">Winter 2024: Soul of the Forest</h2>
             <li><a href="11february24.html">February 11th, 2024</a></li>
             <li><a href="25february24.html">February 25th, 2024</a></li>
             <li><a href="10march24.html">March 10th, 2024</a></li>
